# sss

./: .gitignore  .swp  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  out  output_test  output_test.raw  read_floats.cpp  simple_sound_system  test.raw
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  recording.raw  sss  sss_record  sss_sine
simple_sound_system.dSYM/Contents/: Info.plist
simple_sound_system.dSYM/Contents/Resources/DWARF/: simple_sound_system
simple_sound_system.dSYM/Contents/Resources/Relocations/aarch64/: simple_sound_system.yml
src/: config.h  config.h.in  main.cc  spsc_buffer.hpp  sss.hpp  sss_alsa.hpp  sss_alsa_input.hpp  sss_backend.hpp  sss_buffer.hpp  sss_coreaudio.hpp  sss_coreaudio_input.hpp  sss_fifo.hpp  sss_file.hpp  sss_midi.hpp  sss_mixer.hpp  sss_msg_queue.hpp  sss_node.hpp  sss_synth.hpp  sss_thread.hpp  sss_util.hpp
src/examples/: sss_midi.cc  sss_record.cc  sss_sine.cc  sss_synth.cc
